<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventBus Performance</string>
    <string name="test_eventBus">EventBus</string>
    <string name="test_eventBusEventHierarchy">Event Inheritance</string>
    <string name="test_eventBusEventIgnoreGeneratedIndex">Ignore generated index</string>
    <string name="test_otto">OttoBus</string>
    <string name="test_broadcast">Broadcast</string>
    <string name="test_localBroadcast">Local Broadcast</string>
    <string name="eventViewText">Events:</string>
    <string name="subscriberViewText">Subscribers:</string>
    <string name="buttonStartText">Start</string>

    <string-array name="spinnerTestsToRun">
        <item>Post Events</item>
        <item>Register Subscribers</item>
        <item>Register Subscribers, no unregister</item>
        <item>Register Subscribers, 1. time</item>
    </string-array>
    <string-array name="spinnerThreadModes">
        <item>POSTING</item>
        <item>MAIN</item>
        <item>BACKGROUND</item>
        <item>ASYNC</item>
    </string-array>

    <string name="testIsRunning">Test Is \nRunning!</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonKillProcess">Kill Process</string>
    <string name="thousand">1000</string>
    <string name="number_one">1</string>

</resources>